--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor = "#82fa8e"
-backgroundColor = "#bdf0c2"
-secondaryBackgroundColor = "#59c98f"
-textColor = "#222222"
+primaryColor = "#03820f"
+backgroundColor = "#130f2e"
+secondaryBackgroundColor = "#4cb556"
+textColor = "white"
 font = "sans serif"
